--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
-  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'Open Sans', sans-serif;
+;
   background-color: #fff;
   color: #000; }
 
@@ -19,13 +20,14 @@ body {
 }
 
 #header .logo {
-  font-size: 30px;
-  margin: 0;
-  padding: 0;
-  line-height: 1;
-  font-weight: 600;
-  letter-spacing: 0.8px;
-  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+    margin: 0;
+    padding: 0;
+    line-height: 26;
+    font-weight: 400;
+    letter-spacing: -0.02em;
+    font-family: 'Open Sans';
+    color:#0532C6;
 }
 
 #header .logo a {
@@ -77,12 +79,13 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 0 3px;
-  font-size: 15px;
-  font-weight: 600;
-  color: #222222;
+  font-size: 16px;
+  font-weight: 400;
+  color: #000000;
   white-space: nowrap;
   transition: 0.3s;
   position: relative;
+  font-style: normal;
 }
 
 .navbar a i,
@@ -171,6 +174,8 @@ body {
   left: 100%;
   visibility: visible;
 }
+
+
 
 @media (max-width: 1366px) {
   .navbar .dropdown .dropdown ul {
@@ -301,6 +306,7 @@ body {
   display: block;
 }
 
+
 /*.has-search .form-control {
     padding-left: 2.375rem;
 }
@@ -362,7 +368,8 @@ label.error {
   color: red; }
 
 #message {
-  resize: vertical; }
+  resize: vertical;
+  border: 1px solid #0532C6; }
 
 #form-message-warning, #form-message-success {
   display: none; }
@@ -385,18 +392,23 @@ label.error {
   color: #000; }
 
   hr {
-  margin-top: 1rem;
+  margin-top: 60px;
   margin-bottom: 1rem;
   border-top: 4px solid #0532C6;
   height: 0px;
   width: 100%;
-
+padding-top: 60px;
+}
+.align-items-start2{
+	    padding-bottom: 30px;
 }
 .square {
   display: inline-block;
-  height: 32px;
-  width: 32px;
+  height: 20px;
+  width: 20px;
+  margin-right: 7px;
   background-color: #0532C8;
+  margin-bottom: -1%;
 }
 .global-contact{
     padding-left: 50px;
@@ -454,11 +466,15 @@ color: #0532C6;
   background-image: url("../images/trapazoid box.png");
 }*/
 .icon-rtl {
-  padding-right: 25px;
+  padding-left: 10px;
   background: url("https://static.thenounproject.com/png/101791-200.png") no-repeat right;
   background-size: 20px;
   height: 30px;
+border: 2px solid #ccc;
 }
+
+
+
 .top-left {
 position: absolute;
   top: 0;
@@ -475,7 +491,7 @@ div {
 .text-overlay {
   position: absolute;
   top: 10px;
-  left: 50px;
+  left: 60px;
   padding: 1rem;
   font-size: 2rem;
   font-weight: 100;
@@ -484,6 +500,7 @@ div {
 font-weight: 400;
 font-size: 42px;
 line-height: 150%;
+font-family: 'Open Sans';
 
 }
 .global{
@@ -496,7 +513,7 @@ line-height: 150%;
 font-style: normal;
 font-weight: 400;
 font-size: 15px;
-line-height: 200%;
+color: #0532C6;
 }
 .office{
 font-style: normal;
@@ -516,6 +533,18 @@ font-size: 16px;
 line-height: 22px;
 text-transform: uppercase;
 color: #000000;
+font-family: 'Open Sans';
+}
+.copyright{
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 19px;
+text-transform: uppercase;
+color: #000000;
+font-family: 'Open Sans';
+text-align: right;
+padding-left: 100px;
 }
 .topnav {
   overflow: hidden;
@@ -545,6 +574,8 @@ color: #000000;
   font-size: 17px;
   border: none;
 }
+
+
 
 .topnav .search-container button {
   float: right;
@@ -576,4 +607,23 @@ color: #000000;
   .topnav input[type=text] {
     border: 1px solid #ccc;
   }
+}
+
+.imagebox{
+width : 100%;
+height : 14rem;
+}
+
+#backgroundnone{
+  background-color: white;
+  color: red;
+  font-weight: bold;
+  width: 25%;
+  height: 100%;
+}
+
+@media (min-width: 1200px) {
+#container{
+  max-width: 90%;
+}
 }
